--- a/OPE-app2.0/frontend/src/app/components/signup/signup.component.css
+++ b/OPE-app2.0/frontend/src/app/components/signup/signup.component.css
@@ -1,5 +1,5 @@
 mat-form-field {
-    width: 100%;
+    width: 75%;
 }
 
 label {
@@ -9,7 +9,10 @@ label {
 }
 
 button {
-    float: right;
     width: 200px;
+    text-align: center;
 }
 
+div.forms-container{
+    padding: 50px 40px;
+}
