--- a/OPE-app2.0/frontend/src/app/components/signup/signup.component.html
+++ b/OPE-app2.0/frontend/src/app/components/signup/signup.component.html
@@ -1,25 +1,28 @@
-<div class ="forms-container">
-    <label> Signup </label><br><br><br><br>
+<body>
+    <div class="background"></div>
+    <div class="form-container">
+      <form [formGroup]= "signupForm" (ngSubmit)= "signup()" novalidate>
+        <label>Sign-Up</label>
+        
+        <mat-form-field>
+          <mat-label>Username</mat-label>
+          <input matInput placeholder="Ex. Jeff" formControlName="name">
+        </mat-form-field>
     
-    <form [formGroup]= "signupForm" (ngSubmit)= "signup()" novalidate>
-
         <mat-form-field>
-            <mat-label>Username</mat-label>
-            <input matInput placeholder="Ex. Jeff" formControlName="name">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="Ex. Jeff@gmail.com" formControlName="email">
         </mat-form-field>
-        <br><br>
+    
         <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Ex. Jeff@gmail.com" formControlName="email">
+          <mat-label>Password</mat-label>
+          <input matInput type="password" placeholder="Ex. Jon2002" formControlName="password">
         </mat-form-field>
-        <br><br>
-        <mat-form-field>
-            <mat-label>Password</mat-label>
-            <input matInput type="password"placeholder="Ex. Jon" formControlName="password">
-        </mat-form-field>
-        <br><br>
+    
         <button mat-raised-button type="submit" [disabled]="!signupForm.valid">
-            <span>Sign up</span>
+          <span>Sign up</span>
         </button>
-    </form>
-</div>
+      </form>
+    </div>
+  </body>
+  
