--- a/OPE-app2.0/frontend/src/app/components/login/login.component.html
+++ b/OPE-app2.0/frontend/src/app/components/login/login.component.html
@@ -1,20 +1,25 @@
-<div class ="forms-container">
-    <label> Login </label><br><br><br><br>
-    
-    <form [formGroup]= "loginForm" (ngSubmit)= "login()" novalidate>
+<body>
+    <div class="background"></div>
+    <div class="form-container">
 
+      <form [formGroup]= "loginForm" (ngSubmit)= "login()" novalidate>
+        
+        <label>Login</label>
+  
         <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Ex. Jeff@gmail.com" formControlName="email">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="Ex. Jeff@gmail.com" formControlName="email">
         </mat-form-field>
-        <br><br>
+    
         <mat-form-field>
-            <mat-label>Password</mat-label>
-            <input matInput type="password"placeholder="Ex. Jon" formControlName="password">
+          <mat-label>Password</mat-label>
+          <input matInput type="password" placeholder="Ex. Jon2002" formControlName="password">
         </mat-form-field>
-        <br><br>
+    
         <button mat-raised-button type="submit" [disabled]="!loginForm.valid">
-            <span>Login</span>
+          <span>Login</span>
         </button>
-    </form>
-</div>
+      </form>
+    </div>
+  </body>
+  
