--- a/OPE-app2.0/frontend/src/app/components/navigation/navigation.component.css
+++ b/OPE-app2.0/frontend/src/app/components/navigation/navigation.component.css
@@ -1,21 +1,33 @@
 mat-toolbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 64px;
-}
+    background-color: #90c1d7;
+    color: #000000;
+  }
   
-.flexExpand {
-    flex: 1 1 auto;
-}
-
-mat-toolbar a {
+  #ope {
+    font-weight: bold;
+    font-size: 24px;
+    color: #ffffff;
     text-decoration: none;
-}
+  }
   
-mat-toolbar a.active-link {
-    color: white;
-}
+  span.flexExpand {
+    flex: 1;
+  }
   
-mat-toolbar a span {
-    margin-left: 24px;
-}
+  a {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #ffffff;
+    text-decoration: none;
+    text-align: center;
+    line-height: 56px;
+    height: 56px;
+    min-width: 120px;
+  }
+  
+  a:hover, a.active-link {
+    border-bottom: 3px solid #ffffff;
+  }
+  
