--- a/OPE-app2.0/frontend/src/app/components/signup/signup.component.css
+++ b/OPE-app2.0/frontend/src/app/components/signup/signup.component.css
@@ -1,18 +1,55 @@
-mat-form-field {
-    width: 75%;
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #90c1d7; 
+  z-index: -1;
+}
+
+.form-container {
+  width: 400px;
+  margin: 0 auto;
+  margin-top: 100px;
+  background-color: #FFFFFF;
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
 }
 
 label {
-    font-size: 40px;
-    font-family: "Georgia, serif";
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
 
+mat-form-field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+input {
+  font-size: 16px;
 }
 
 button {
-    width: 200px;
-    text-align: center;
+  background-color: #90c1d7; 
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin-top: 20px;
+  align-self: center;
 }
 
-div.forms-container{
-    padding: 50px 40px;
+button:hover {
+  background-color: #90c1d7; 
+  cursor: pointer;
 }
