--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
@@ -15,7 +15,7 @@
 <body ng-app="myApp" ng-controller="myCtrl">
   <form (ngSubmit)="submitReview()" class="mat-elevation-z8" style="padding: 20px;">
     <mat-form-field>
-      <textarea matInput [(ngModel)]="reviewText" placeholder="Product Review"></textarea>
+      <textarea matInput [(ngModel)]="reviewText" [ngModelOptions]="{ standalone: true }" placeholder="Product Review"></textarea>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Evaluate</button>
   </form>
