--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
@@ -1,43 +1,40 @@
-
-body {
-  background-color: #f8f8f8;
-  font-family: 'Roboto', sans-serif;
+.dashboard-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-.mat-elevation-z8 {
-  background-color: white;
-  border-radius: 4px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 20px auto;
-  max-width: 500px;
+
+.dashboard-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding: 20px;
+  flex: 1;
 }
 
-mat-form-field {
-  width: 100%;
-}
-
-button[type="submit"] {
-  margin-top: 20px;
-  width: 100%;
-}
-
-.mat-elevation-z8[ng-if="showResult"] {
-  background-color: white;
+.dashboard-card {
+  background-color: #fff;
   border-radius: 4px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 20px auto;
-  max-width: 500px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   padding: 20px;
+  width: 45%;
+  margin-bottom: 20px;
+  position: relative;
 }
 
-.mat-elevation-z8[ng-if="showResult"] h3 {
-  font-size: 20px;
-  font-weight: 500;
-  margin-bottom: 10px;
+.dashboard-card h2 {
+  font-size: 24px;
+  margin: 0 0 10px 0;
 }
 
-.mat-elevation-z8[ng-if="showResult"] p {
+.dashboard-card form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.dashboard-card form label {
   font-size: 16px;
-  margin: 0;
+  margin-bottom: 10px;
 }
