--- a/OPE-app2.0/frontend/src/app/components/homepage/homepage.component.css
+++ b/OPE-app2.0/frontend/src/app/components/homepage/homepage.component.css
@@ -1,76 +1,81 @@
 :host {
-    display: block;
-    height: 100%;
-  }
-  
-  .background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #90c1d7;
-    z-index: -1;
-  }
-  
-  html, body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #90c1d7;
-  }
-  
-  .box {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    font-family: 'Roboto', sans-serif;
-    margin: 50px auto;
-    width: 80%;
-    max-width: 1000px;
-  }
-  
-  
-  h1 {
-    font-size: 36px;
-    font-weight: bold;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #90c1d7;
-  }
-  
-  p {
-    font-size: 18px;
-    margin-bottom: 30px;
-    line-height: 1.5;
-    text-align: justify;
-  }
-  
-  a {
-    font-size: 16px;
-    padding: 8px 16px;
-    margin-top: 10px;
-    background-color: #90c1d7;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: opacity 0.15s;
-  }
-  
-  a:hover {
-    background-color:   #90c1d7;
-    cursor: pointer;
-  }
+  display: block;
+  height: 100%;
+}
 
-  a:hover:active{
-    opacity: 0.8; 
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #90c1d7;
+  z-index: -1;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #90c1d7;
+}
+
+.box {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  font-family: 'Roboto', sans-serif;
+  margin: 50px auto;
+  width: 80%;
+  max-width: 1000px;
+}
+
+h1 {
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #90c1d7;
+}
+
+p {
+  font-size: 18px;
+  margin-bottom: 30px;
+  line-height: 1.5;
+  text-align: justify;
+}
+
+a {
+  font-size: 16px;
+  padding: 8px 16px;
+  margin-top: 10px;
+  background-color: #90c1d7;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: opacity 0.15s;
+}
+
+a:hover {
+  background-color: #90c1d7;
+  cursor: pointer;
+}
+
+a:hover:active {
+  opacity: 0.8;
+}
+
+@media only screen and (max-width: 768px) {
+  .box {
+    width: 90%;
+    margin: 20px auto;
   }
-  
+}
