--- a/OPE-app2.0/frontend/src/app/components/homepage/homepage.component.html
+++ b/OPE-app2.0/frontend/src/app/components/homepage/homepage.component.html
@@ -14,7 +14,7 @@
       <p>We use Naive Bayes and Aspect Extraction models to analyze customer reviews of products. These models help us identify the aspects that customers care about the most and the sentiment associated with each aspect. Based on this information, we provide a comprehensive evaluation of the product that includes a breakdown of its strengths and weaknesses.</p>
 
       <h2 class="subtitle">Demo</h2>
-      <p>Check out our software thesis in action <a href="demo.html">here</a>.</p>
+      <p>Check out our software thesis in action <a href="">here</a>.</p>
 
       <h2 class="subtitle">Contact Us</h2>
       <p>If you have any questions or feedback about our software thesis, please don't hesitate to get in touch with us using the form below or send us an email at contact@thesisteam.com.</p>
@@ -22,3 +22,6 @@
     </div>
   </div>
 </mat-card>
+
+
+
