--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
@@ -5,7 +5,7 @@
       <form>
         <label for="review-input">Input review:</label>
         <textarea id="review-input" name="review-input"></textarea>
-        <button type="submit">Analyze</button>
+        <button type="submit" (click)="submitReview()">Analyze</button>
       </form>
     </div>
     <div class="dashboard-card">
