--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-    
-    <div class="bar" [chart]="oneLineBar"></div>
-    <div class="bar" [chart]="oneLineBar1"></div>
-    <div class="bar" [chart]="oneLineBar2"></div>
-    <div class="bar" [chart]="oneLineBar3"></div>
-  
+
+    <div class="container">
+      <div *ngFor="let aspect of aspects" class="bar" [chart]="aspectCharts[aspect]"></div>
+    </div>
+
   </div>
