--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
@@ -17,7 +17,7 @@
         <form>
           <label for="review1">Write a review:</label><br>
           <textarea id="review1" name="review" maxlength="100"></textarea><br><br>
-          <input type="submit" value="Evaluate">
+          <input type="submit" value="Evaluate" (click)="submitReview()">
         </form>
       </div>
       <div class="product">
@@ -26,7 +26,7 @@
         <form>
           <label for="review2">Write a review:</label><br>
           <textarea id="review2" name="review" maxlength="100"></textarea><br><br>
-          <input type="submit" value="Evaluate">
+          <input type="submit" value="Evaluate" (click)="submitReview()">
         </form>
       </div>
     </div>
