--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.html
@@ -15,7 +15,7 @@
         <img src="https://media1.giphy.com/media/LgbzRlRvPndn5uSs0v/giphy.gif?cid=ecf05e47oz88eow6bxibytn7h736sl68zgq8of5fvci2slxc&ep=v1_gifs_related&rid=giphy.gif&ct=s" alt="Product 1">
         <h3>Product 1</h3>
         <form>
-          <label for="review1">Write a review:</label><br>
+          <label for="review1">Put the URL of the product page here:</label><br>
           <textarea id="review1" name="review" maxlength="100"></textarea><br><br>
           <input type="submit" value="Evaluate" (click)="submitReview()">
         </form>
@@ -24,7 +24,7 @@
         <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmFhZTU3NDViYWI4MDI3NGVjMjE0MDU2OTA5MTRlZDJjNGI5MzdhYSZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PXM/Uv7ZVb5EKtFZFOMZtC/giphy.gif" alt="Product 2">
         <h3>Product 2</h3>
         <form>
-          <label for="review2">Write a review:</label><br>
+          <label for="review2">Put the URL of the product page here:</label><br>
           <textarea id="review2" name="review" maxlength="100"></textarea><br><br>
           <input type="submit" value="Evaluate" (click)="submitReview()">
         </form>
