--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
@@ -72,6 +72,7 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       text-align: center;
       margin: 0 auto;
+      max-width: 300px;
     }
 
       .product img {
