--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
@@ -7,8 +7,16 @@
     margin-top: 30px;
   
     & > * {
-      border-radius: 20px;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     }
   }
   
+mat-grid-tile {
+    background: lightblue;
+    overflow: auto;
+}
+  
+
+pre {
+  white-space: pre-wrap;
+}
