--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
@@ -11,12 +11,11 @@
     }
   }
   
-mat-grid-tile {
-    background: lightblue;
-    overflow: auto;
-}
-  
-
 pre {
   white-space: pre-wrap;
+}
+
+.container h2 {
+  text-transform: uppercase;
+  color: rgb(27, 156, 133);
 }
