--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
@@ -4,22 +4,19 @@
     <div class="container" *ngIf="aspect_list">
       <div class="container" *ngFor="let item of aspect_list | keyvalue">
         <h2>{{ item?.key }}</h2>
-        <ul>
-          <li><pre>{{ item.value | json }}</pre></li>
-        </ul>
+        <pre class="container">{{ item.value | json }}</pre>
       </div>
     </div>
 
     <div class="container">
+      <div class="bar" [chart]="onePieChart"></div>
       <div *ngFor="let aspect of aspects" class="bar" [chart]="aspectCharts[aspect]"></div>
     </div>
 
     <div class="container" *ngIf="list_sentences">
       <div class="container" *ngFor="let item of list_sentences | keyvalue">
         <h2>{{ item?.key }}</h2>
-        <ul>
-          <li><pre>{{ item.value | json }}</pre></li>
-        </ul>
+        <pre class="container">{{ item.value | json }}</pre>
       </div>
     </div>
 
