--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!-- <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Beautiful Project</title>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 
 <body>
@@ -44,17 +42,14 @@
   </div>
 </body>
 
-</html>
+</html> --> 
 
 
-<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Beautiful Project</title>
-  
 </head>
 
 <body>
@@ -100,4 +95,4 @@
   </div>
 </body>
 
-</html> -->
+</html>
