Redesigned charts with spaces

--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
@@ -1,11 +1,11 @@
 .container {
-    /* display: grid;
+    /* display: grid; */
     padding: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 500px));
-    grid-gap: 20px;
-    place-content: center;
-    margin-top: 30px;
-     */
+    /* grid-template-columns: repeat(auto-fit, minmax(350px, 500px)); */
+    /* grid-gap: 20px; */
+    /* place-content: center; */
+    /* margin-top: 30px; */
+    
     display: flex;
     flex-direction: column;
     align-items: center;
